# aidevteam

./: README.md  pyproject.toml  report.md
knowledge/: user_preference.txt
src/aidevteam/: client.py  crew.py  main.py  server.py
src/aidevteam/config/: agents.yaml  tasks.yaml
src/aidevteam/tools/: custom_tool.py
src/client/: main.py
